Fix fonts on mobile

--- a/static/base.css
+++ b/static/base.css
@@ -197,11 +197,9 @@ body {
 
 @media (min-device-width: 320px) and (max-device-width: 768px) {
   body {
-    font-size: 3em;
     max-width: 90%;
   }
   pre {
-    font-size: 1.1em;
     line-height: 1.5em;
     margin-left: -10px;
   }
